# SenseMind

./: .gitignore  Dockerfile  README.md  docker-compose.yml  locustfile.py  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: main_sense-mind.yml
Android/: settings.gradle.kts
Android/app/: build.gradle.kts
Android/app/src/androidTest/java/com/example/sensemind/: ExampleInstrumentedTest.kt
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/res/drawable/: ic_dashboard.xml  ic_devices.xml  ic_history.xml  ic_settings.xml
Android/app/src/main/res/layout/: activity_main.xml  dialog_add_device.xml  fragment_admin.xml  fragment_dashboard.xml  fragment_device_list.xml  fragment_history.xml  fragment_login.xml  fragment_register.xml  fragment_settings.xml  item_device.xml
Android/app/src/main/res/menu/: bottom_nav_menu.xml
Android/app/src/main/res/navigation/: nav_graph.xml
Android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
Android/app/src/main/res/values-night/: themes.xml
Android/gradle/: libs.versions.toml
Android/gradle/wrapper/: gradle-wrapper.properties
core_engine/: app.py  wsgi.py
core_engine/api/: admin_routes.py  api_routes.py  auth_routes.py  device_routes.py
core_engine/data_source/: data_simulator.py  train_model.py
core_engine/database/: db_storage.py  models.py
core_engine/services/: analytics_service.py  ml_classifier.py
core_engine/static/: index.html
iot_device/: client.py  config.json
iot_device2/: config.json
iot_device3/: client.py  config.json
(+24 files in other folders)
