[project]
name = "sensemind"
version = "0.1.0"
description = ""
authors = [
    {name = "Rostyslav",email = "rost.tarasov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "waitress (>=3.0.2,<4.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "flask (>=3.1.3,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "flasgger (>=0.9.7.1,<0.10.0.0)",
    "flask-cors (>=6.0.2,<7.0.0)",
    "flask-jwt-extended (>=4.7.1,<5.0.0)",
    "flask-migrate (>=4.1.0,<5.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
